<resources>
    <string name="app_name">超家伙(测试版)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_text">超家伙</string>
    <string name="goods_title_text">暨南社区便利店</string>
    <string name="goods_level_text">lv1</string>
    <string name="goods_horn_text">你还有未领取的商家补贴</string>
    <string name="goods_sell_num_text">0</string>
    <string name="goods_sell_text">出售中</string>
    <string name="goods_sold_out_num_text">1</string>
    <string name="goods_sold_out_text">已下架</string>
    <string name="goods_category_num_text">11</string>
    <string name="goods_category_text">分类</string>
    <string name="order_title_text"></string>
    <string name="good_level_text">LV1</string>
    <string name="order_horn_text">你还有未领取的商家补贴</string>
    <string name="order_complete_num_text">0</string>
    <string name="order_complete_text">进行中</string>
    <string name="order_sell_num_text">0</string>
    <string name="order_sell_text">已完成</string>
    <string name="order_in">进行中</string>
    <string name="order_complete">已完成</string>
    <string name="order_num_text">订单编号:</string>
    <string name="order_person_text">收货人:</string>
    <string name="order_complete_btn_text">订单完成</string>
    <string name="order_close_btn_text">订单关闭</string>
    <string name="me_order_text">我的订单</string>
    <string name="me_marketing_text">统计中心</string>
    <string name="me_shop_text">店铺管理</string>
    <string name="me_goods_text">商品管理</string>
    <string name="me_help_text">关于我们</string>
    <string name="me_customerservice_text">客户管理</string>
    <string name="me_remind_text">客户提醒</string>
    <string name="order_serial_text">订单号:</string>
    <string name="order_buyer_text">收货人:</string>
    <string name="commication_text">联系买家</string>
    <string name="order_item_price_text">实收款:</string>
    <string name="order_item_time_text">完成时间：</string>
    <string name="order_number_text">数量:</string>
    <string name="btn_complete_text">订单完成</string>
    <string name="goods_onoffer_num_text">0</string>
    <string name="goods_onoffer_text">出售中</string>
    <string name="goods_soldout_num_text">1</string>
    <string name="goods_soldout_text">已下架</string>
    <string name="market_data_text">销售数据中心</string>
    <string name="market_left_visit_num_text">>90000</string>
    <string name="market_left_visit_text">日均访问量</string>
    <string name="market_center_conversion_num_text">0</string>
    <string name="market_center_conversion_text">购买转化率</string>
    <string name="market_right_money_num_text">0</string>
    <string name="market_yessales_text">昨天销量</string>
    <string name="market_historysales_text">历史销量</string>
    <string name="market_goodsscannum_text">商品销售量</string>
    <string name="shop_home_text">店铺名片管理</string>
    <string name="shop_decorate_text">店铺装修管理</string>
    <string name="shop_my_name_text">负责人：</string>
    <string name="shop_my_title">华润万家暨南社区福利店</string>
    <string name="shop_my_name">钟经理</string>
    <string name="shop_my_address_text">地址：</string>
    <string name="shop_my_address">暨南大学东体育馆南</string>
    <string name="shop_my_tel_text">电话：</string>
    <string name="shop_my_tel">020-90902010</string>
    <string name="shop_nav_item_delivery_text">送货员编辑资料</string>
    <string name="shop_nav_item_supply_text">供应链货源编辑</string>
    <string name="shop_nav_item_clientservice_text">客服组线上交接</string>
    <string name="order_add_text">添加订单</string>
    <string name="order_delete_text">删除订单</string>
    <string name="order_modify_text">修改订单</string>
    <string name="order_resume_text">恢复订单</string>
    <string name="login_text">立即登录</string>
    <string name="setting_me_text">头像</string>
    <string name="setting_name_text">名字</string>
    <string name="setting_city_text">所在城市</string>
    <string name="setting_qq_text">QQ</string>
    <string name="setting_wechat_text">微信号</string>
    <string name="setting_card_text">关联卡号</string>
    <string name="setting_password_text">重置取现密码</string>
    <string name="setting_remind_text">提示音</string>
    <string name="setting_clearcache_text">清除缓存</string>
    <string name="setting_update_text">检查更新</string>
    <string name="setting_feedback_text">意见反馈</string>
    <string name="setting_share_text">分享给朋友</string>
    <string name="setting_about_text">关于超家伙</string>
    <string name="login_username_text">账号:</string>
    <string name="login_username_edit_hint">手机号</string>
    <string name="login_password_edit_hint">请输入密码</string>
    <string name="login_password_text">密码:</string>
    <string name="login_btn_text">登录</string>
    <string name="login_registe_text">没有账号请注册</string>
    <string name="login_retrieve_text">找回密码</string>
    <string name="login_by_weixin_text">微信登录</string>
    <string name="login_by_qq_text">QQ登录</string>
    <string name="login_by_other_text">其他方式登录</string>
    <string name="error_invalid_number">请输入正确的数字</string>
    <string name="error_invalid_digit">请输入正确的数字</string>
    <string name="error_invalid_price">请输入正确的商品价格</string>
    <string name="error_invalid_stock">请输入正确的商品库存</string>
    <string name="error_invalid_float">请输入正确的浮点数</string>
    <string name="error_invalid_mobile">输入的手机号码不可用</string>
    <string name="error_length_password">密码至少6位且不超过20位</string>
    <string name="error_invalid_password">密码以字母开头只能包含字符、数字和下划线</string>
    <string name="error_incorrect_password">手机号码不存在或者密码不正确</string>
    <string name="error_field_required">必输</string>
    <string name="goods_add_text">添加商品</string>
    <string name="goods_delete_text">删除商品</string>
    <string name="goods_modify_text">修改商品</string>
    <string name="goods_resume_text">恢复商品</string>
    <string name="me_category_text">类别管理</string>
    <string name="error_comfirm_password">两次输入的密码不相同</string>
    <string name="register_tel_text">输入手机号码</string>
    <string name="register_sms_text">输入短信密码</string>
    <string name="register_details_text">输入手机号，点击“获取密码后”，系统会自动发一条默认的密码短信</string>
    <string name="register_tel_hint_text">请输入手机号</string>
    <string name="register_code_hint_text">请输入验证码</string>
    <string name="register_password_comfirm_hint_text">请重复输入密码</string>
    <string name="register_telcode_hint_text">请输入短信验证码</string>
    <string name="send_telcode">获取验证码</string>
    <string name="register_checkbox_text">同意，注册协议</string>
    <string name="register_confirm_text">确定</string>
    <string name="register_bottom_text1">[提示]</string>
    <string name="register_bottom_text2">1.使用手机注册免费</string>
    <string name="register_bottom_text3">2.此手机号登陆超家伙</string>
    <string name="ad_num_text">0</string>
    <string name="ad_text">投广告</string>
    <string name="category_num_text">1</string>
    <string name="category_text">分类编辑</string>
    <string name="pop_main_head_left_text">取消</string>
    <string name="pop_main_head_right_text">发布</string>
    <string name="add_goods_state">发帖表明你同意</string>
    <string name="pop_goods_agreement">《使用声明》</string>
    <string name="add_goods_publish_text">发布到</string>
    <string name="add_goods_category_text">分类预览</string>
    <string name="pop_title_text">标题:</string>
    <string name="pop_title_edit_hint">请输入标题</string>
    <string name="pop_content_text">内容:</string>
    <string name="pop_title_content_hint">输入正文内容...</string>
    <string name="pop_tel_edit">添加联系电话</string>
    <string name="pop_tel_text">联系电话(非必填)</string>
    <string name="category_add_text">添加类别</string>
    <string name="category_delete_text">删除类别</string>
    <string name="category_modify_text">修改类别</string>
    <string name="category_resume_text">恢复类别</string>
    <string name="ad_add_text">添加广告</string>
    <string name="ad_delete_text">删除广告</string>
    <string name="ad_modify_text">修改广告</string>
    <string name="ad_resume_text">恢复广告</string>
    <string name="shop_text">新建店铺</string>
    <string name="shop_modify_text">修改店铺</string>
    <string name="dialog_album">手机相册</string>
    <string name="dialog_camera">相机拍照</string>
    <string name="dialog_filemanager">文件管理器</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title_text">上传方式选择</string>
    <string name="add_shop_publish_text">发布到：</string>
    <string name="add_shop_category_text">社区阵营：</string>
    <string name="pop_shop_title_text">店铺名(0/20)</string>
    <string name="pop_shop_title_edit_hint">请输入店铺名</string>
    <string name="pop_shop_content_text">店铺简介</string>
    <string name="pop_shop_head_text">店铺头像</string>
    <string name="pop_shop_content_hint">输入简介~</string>
    <string name="add_image_deatil_text">图文详情(0/8)</string>
    <string name="add_image_deatil_text_agreement">营业执照、室内照片、经营许可证上传</string>
    <string name="pop_shop_tel_text">联系电话</string>
    <string name="pop_shop_tel_edit_hint">请输入联系电话</string>
    <string name="pop_shop_person_text">联系人</string>
    <string name="pop_shop_person_edit_hint">请输入联系人</string>
    <string name="pop_link_text">允许用户通过应用内私信联系</string>
    <string name="pop_shop_address_text">地址</string>
    <string name="pop_shop_address_edit_hint">请输入联系地址</string>
    <string name="pop_shop_location_title_text">地图选位置</string>
    <string name="pop_shop_location_text">选择位置</string>
    <string name="pop_shop_time_text">营业时间</string>
    <string name="pop_time_all_text">全天</string>
    <string name="pop_shop_time_start_text">开始</string>
    <string name="pop_shop_time_start">9:00</string>
    <string name="pop_shop_time_end_text">结束</string>
    <string name="pop_shop_time_end">21:00</string>
    <string name="shop_add_btn_text">确认</string>
    <string name="order_details_info_text">订单信息</string>
    <string name="order_details_serial_text">订单编号</string>
    <string name="order_details_time_text">下单时间</string>
    <string name="order_details_payway_text">支付方式</string>
    <string name="order_details_status_text">订单状态</string>
    <string name="order_details_goodsinfo_text">商品信息</string>
    <string name="order_details_delivery_text">收货信息</string>
    <string name="order_details_person_text">收货人</string>
    <string name="order_details_tel_text">手机号码</string>
    <string name="order_details_address_text">收货地址</string>
    <string name="order_details_deliverytime_text">收货时间</string>
    <string name="order_details_bill_text">发票抬头</string>
    <string name="order_details_money_text">订单金额</string>
    <string name="order_details_allmoney_text">订单总金额</string>
    <string name="order_details_freight_text">运费</string>
    <string name="item_order_details_num_text">数量</string>
    <string name="item_order_details_money_text">金额</string>
    <string name="order_details_shoulpay_text">应付金额</string>
    <string name="delete_order_text">删除订单</string>
    <string name="order_details_transport_btn">物流信息</string>
    <string name="goods_detail_image_title_text">商品图片</string>
    <string name="goods_detail_title">霜降更甜10斤 山东烟台栖霞苹果水果新鲜 红富士苹果</string>
    <string name="pop_image_text">商品图片</string>
    <string name="pop_price_text">商品价格:</string>
    <string name="pop_price_edit">请输入价格</string>
    <string name="pop_stock_text">商品库存:</string>
    <string name="pop_stock_edit">请输入库存</string>
    <string name="pop_type_text">商品单位:</string>
    <string name="pop_type_edit">请输入商品单位</string>
    <string name="pop_category_text">请选择商品类别</string>
    <string name="pop_category">请点击选择</string>
    <string name="default_category">商品类别</string>
    <string name="free_ship_text1">满包邮活动规则</string>
    <string name="free_ship_text2">1、买家给满足你设置的金额，则订单包邮</string>
    <string name="free_ship_text3">2、如果你同时设置了一下或送，买家购买时刻同时享受优惠，包括</string>
    <string name="free_ship_text4">3、限时优惠</string>
    <string name="free_ship_text5">4、私密折扣</string>
    <string name="free_ship_text6">5、使用购物券</string>
    <string name="free_ship_text7">包邮只对自营商品有效！</string>
    <string name="add_freeship_btn_text">创建</string>
</resources>