<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include
                android:id="@+id/title_bar"
                layout="@layout/title_bar" />

            <LinearLayout
                android:id="@+id/add_goods_ll1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/add_goods_state"
                    style="@style/pop_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_goods_state" />

                <TextView
                    android:id="@+id/add_goods_agreement"
                    style="@style/pop_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pop_goods_agreement" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_goods_ll2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/add_goods_publish_text"
                    style="@style/pop_publish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_goods_publish_text" />

                <TextView
                    android:id="@+id/add_goods_category_text"
                    style="@style/pop_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_goods_category_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/pop_title_text"
                style="@style/pop_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/pop_title_text" />

            <EditText
                android:id="@+id/pop_title_edit"
                style="@style/pop_edit_hint_style"
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_margin="15.0dip"
                android:background="@drawable/pop_title_edit"
                android:hint="@string/pop_title_edit_hint"
                android:paddingLeft="20.0dip" />

            <TextView
                android:id="@+id/pop_content_text"
                style="@style/pop_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/pop_content_text" />

            <FrameLayout
                android:id="@+id/relative_content_edit_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/pop_content_edit"
                    style="@style/pop_edit_hint_style"
                    android:layout_width="fill_parent"
                    android:layout_height="240.0dip"
                    android:layout_margin="15.0dip"
                    android:background="@drawable/pop_title_edit"
                    android:gravity="top|left"
                    android:hint="@string/pop_title_content_hint"
                    android:paddingLeft="20.0dip"
                    android:paddingTop="20.0dip" />
            </FrameLayout>

            <TextView
                android:id="@+id/pop_image_text"
                style="@style/pop_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/pop_image_text" />

            <RelativeLayout
                android:id="@+id/image_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/whitebg" >

                <GridView
                    android:id="@+id/content_add_gridview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30.0dip"
                    android:layout_marginTop="6.0dip"
                    android:numColumns="6" >
                </GridView>

                <ImageView
                    android:id="@+id/content_add_image"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:layout_below="@+id/content_add_gridview"
                    android:layout_marginLeft="30.0dip"
                    android:layout_marginTop="5.0dip"
                    android:background="@drawable/content_add_image_icon" />
            </RelativeLayout>

            <TextView
                android:id="@+id/pop_price_text"
                style="@style/pop_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/pop_price_text" />

            <EditText
                android:id="@+id/pop_price_edit"
                style="@style/pop_edit_hint_style"
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_margin="15.0dip"
                android:background="@drawable/pop_title_edit"
                android:hint="@string/pop_price_edit"
                android:paddingLeft="20.0dip" />

            <TextView
                android:id="@+id/pop_stock_text"
                style="@style/pop_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/pop_stock_text" />

            <EditText
                android:id="@+id/pop_stock_edit"
                style="@style/pop_edit_hint_style"
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_margin="15.0dip"
                android:background="@drawable/pop_title_edit"
                android:hint="@string/pop_stock_edit"
                android:paddingLeft="20.0dip" />

            <TextView
                android:id="@+id/pop_type_text"
                style="@style/pop_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/pop_type_text" />

            <EditText
                android:id="@+id/pop_type_edit"
                style="@style/pop_edit_hint_style"
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
                android:layout_margin="15.0dip"
                android:background="@drawable/pop_title_edit"
                android:hint="@string/pop_type_edit"
                android:paddingLeft="20.0dip" />

            <TextView
                android:id="@+id/pop_category_text"
                style="@style/pop_title_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/pop_category_text" />

            <RelativeLayout
                android:id="@+id/goods_category_ll"
                android:layout_width="fill_parent"
                android:layout_height="60.0dip"
				android:layout_margin="15.0dip"
                android:background="@color/whitebg"
                android:clickable="true"
                 >

                <TextView
                    android:id="@+id/pop_category"
                    style="@style/pop_title_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5.0dip"
                    android:text="@string/pop_category" />
                <TextView 
                    android:id="@+id/add_goods_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/title_text_style"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/add_goods_image_arrow"
                    android:layout_marginRight="5.0dip"
                    android:text="@string/default_category"/>
                
                <ImageView 
                    android:id="@+id/add_goods_image_arrow"
                    android:layout_width="@dimen/arrow_width"
                    android:layout_height="@dimen/arrow_height"
                    android:background="@drawable/arrow_right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10.0dip"
                    
                    />
            </RelativeLayout>


            <Button
                android:id="@+id/goods_add_btn"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_margin="20.0dip"
                android:background="@drawable/btn_shop_pop_add"
                android:text="@string/shop_add_btn_text" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>